2005-12-23  Matt Hodges  <MPHodges@member.fsf.org>

	* w3m-util.el (w3m-list-buffers): Ensure disabling the w3m-fb-mode
	after a careless (setq w3m-fb-mode t).

2005-12-22  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* w3m-antenna.el (w3m-antenna-refresh-interval): Add new customize
	variable.
	(w3m-antenna-make-contents): Add new generation rule for refresh
	interval replacing `%R' to META Refresh tag and contents value are
	`w3m-antenna-refresh-interval'.
	(w3m-antenna-html-skelton): Add %R rule.

2005-12-18  Mark Plaksin  <happy@mcplaksin.org>

	* shimbun/sb-emacswiki.el (shimbun-get-headers): Gets the Wiki
	username into the From field of articles; appends the description
	of the change to the end of the Subject line; removes some
	apparently extraneous cddr's.

2005-12-19  Matt Hodges  <MPHodges@member.fsf.org>

	* w3m-util.el (w3m-list-buffers): Further fix against the case
	where someone did (setq w3m-fb-mode t).

2005-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-fb.el (w3m-fb-mode): Never activate w3m-fb-mode if
	w3m-pop-up-frames is non-nil.

	* w3m-util.el (w3m-list-buffers): Reset w3m-fb-mode if it seems to
	have been set thoughtlessly.

2005-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-fb.el: Don't require w3m.
	(w3m-fb-frame-parameter): Always define.
	(w3m-fb-delete-frame-functions): Ditto.
	(w3m-fb-select-buffer): Fix the 2nd clause of cond.
	(w3m-fb-advised-functions): Remove.
	(w3m-list-buffers): Move advice code to w3m-fb.el.
	(w3m-close-window): Move advice code to w3m.el.
	(w3m-delete-buffer): Ditto.
	(w3m-quit): Ditto.
	(w3m-fb-mode): Remove w3m-fb-advised-functions stuff.

	* w3m.el (w3m-fb): Require.
	(w3m-delete-buffer, w3m-quit, w3m-close-window): Merge the codes
	which were formerly provided as advices in w3m-fb.el.

	* w3m-util.el (w3m-fb-list-buffers-frame, w3m-fb-mode): Bind them
	when compiling.
	(w3m-fb-frame-parameter): Autoload.
	(w3m-list-buffers): Merge the code which was formerly provided as
	an advice in w3m-fb.el.
